<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_date_sort_key"
        android:title="@string/pref_date_sort_title"
        android:dialogTitle="@string/pref_date_sort_title"
        android:summary="%s"
        android:entries="@array/pref_date_entry"
        android:entryValues="@array/pref_sort_values"
        android:defaultValue="@string/pref_sort_default"
        />
    <ListPreference
        android:key="@string/pref_claim_sort_key"
        android:title="@string/pref_claim_sort_title"
        android:dialogTitle="@string/pref_claim_sort_title"
        android:summary="%s"
        android:entries="@array/pref_num_claims_entry"
        android:entryValues="@array/pref_sort_values"
        android:defaultValue="@string/pref_sort_default"
        />
    <ListPreference
        android:key="@string/pref_patent_sort_key"
        android:title="@string/pref_patent_sort_title"
        android:dialogTitle="@string/pref_patent_sort_title"
        android:summary="%s"
        android:entries="@array/pref_patent_entry"
        android:entryValues="@array/pref_sort_values"
        android:defaultValue="@string/pref_sort_default"
        />
    <ListPreference
        android:key="@string/pref_result_sort_key"
        android:title="@string/pref_result_sort_title"
        android:dialogTitle="@string/pref_result_sort_title"
        android:summary="%s"
        android:entries="@array/pref_result_num_entry"
        android:entryValues="@array/pref_result_num_values"
        android:defaultValue="@string/pref_result_default"
        />
</PreferenceScreen>